# when_people_are_floods

./: README.md
code/: config.py  pyproject.toml
code/0_annotation/: calculate_agreement.py  load_qualtrics_results.py  sample_for_annotation.py
code/1_models/: 00_run_sbert.py  01a_submit_gpt_batch.py  01b_save_gpt_outputs.py  02_run_llama_huggingface.py
code/2_scoring_and_evaluation/: 1_calculate_metaphor_scores.py  evaluate_and_compare_models.py
code/3_analysis/: regression_ideology_metaphor.R  regression_metaphor_engagement.R  run_regression_ideology_metaphor.sh  run_regression_metaphor_engagement.sh
code/4_notebooks/: plot_agreement.ipynb  plot_descriptive_analysis.ipynb  plot_ideology_metaphor_effects.ipynb  plot_metaphor_engagement_effects.ipynb  plot_model_performance.ipynb  report_eval.ipynb
data/: annotated_data_id_only.tsv  annotated_data_sample_with_text.tsv  carrier_sentences.tsv
data/prompts/: zeroshot_baseline.txt  zeroshot_description.txt
results/: interannotator_agreement.tsv  sample_tweet_data_with_metaphor_scores.tsv  sample_tweet_data_with_text.tsv
results/analysis/: ideology_effects_on_metaphor_2024-10-07_frames_score_binarized_ideology_avg_marginal_effects.tsv  ideology_effects_on_metaphor_2024-10-07_frames_score_binarized_ideology_marginal_effects_by_ideology.tsv  ideology_effects_on_metaphor_2024-10-07_frames_score_binarized_ideology_test.tex  ideology_effects_on_metaphor_2024-10-07_frames_score_binarized_ideology_test_avg_marginal_effects.tsv  ideology_effects_on_metaphor_2024-10-07_no_frames_score_binarized_ideology.tex  (+20 more)
(+35 files in other folders)
