[project]
name = "metaphor"
version = "0.1.0"
description = "Code for measuring and analyzing metaphorical language"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.33.4",
    "lemminflect>=0.2.3",
    "matplotlib>=3.7.0",
    "networkx>=2.8.4",
    "numpy>=1.23.5",
    "openai>=1.97.0",
    "pandas>=1.5.3",
    "scikit-learn>=1.2.1",
    "scipy>=1.10.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "simpledorff>=0.0.2",
    "statsmodels>=0.13.5",
    "torch>=2.1",
    "ujson>=5.4.0",
]
